--- a/flappyboi/flappyboi.vcxproj
+++ b/flappyboi/flappyboi.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{5E5EEC92-AB2B-47F8-902E-6FDB8BB63052}</ProjectGuid>
     <RootNamespace>flappyboi</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -146,6 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Constants.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FlappyBoi.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -153,6 +155,7 @@
     <ClCompile Include="Obstacle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FlappyBoi.h" />
     <ClInclude Include="Map.h" />
