--- a/flappyboi/flappyboi.vcxproj.filters
+++ b/flappyboi/flappyboi.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="Obstacle.cpp">
       <Filter>Source Files\entity</Filter>
     </ClCompile>
-    <ClCompile Include="InputHandler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Entity.cpp">
       <Filter>Source Files\entity</Filter>
     </ClCompile>
@@ -50,14 +47,11 @@
     <ClInclude Include="Obstacle.h">
       <Filter>Header Files\entity</Filter>
     </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="InputHandler.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Map.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Header Files\entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
